<resources>
    <string name="app_name">CodeAlphaEventAlert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add Event</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
</resources>