<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.AddEventFragment">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_event"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/event_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDate"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/event_date" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="8dp"
        android:text="@string/save"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>